--- a/install
+++ b/install
@@ -19,13 +19,31 @@ then
     exit
 fi
 
+dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal")
+if [[ -n "$dragonOS_focal" ]]
+then
+    # DragonOS Focal
+    echo "DragonOS Focal detected"
+    echo "This branch is for Ubuntu 18.04, 18.04.5 and 18.04.6 only. Switch to a different FISSURE branch before installing!"
+    exit
+fi
+
 python_version=$(python -V 2>&1 | grep -Po '(?<=Python )(.+)')
 if [[ -z "$python_version" ]]
 then
     # Ubuntu 18.04
     echo "No Python!" 
-    sudo apt-get -y update
-    sudo apt-get install -y python-setuptools python-dev build-essential        
+    read -p "Python2 is required to open the installer. Do you want to proceed? [y]/n: " yn1
+    case $yn1 in
+        # No
+        [Nn]* ) exit;;
+        
+        # Yes/Everything Else
+        * )
+            sudo apt-get -y update
+            sudo apt-get install -y python-setuptools python-dev build-essential     
+        ;;
+    esac
 fi
 
 qt4_version=$(ls /usr/lib/python2.7/dist-packages/ | grep PyQt4)
@@ -33,19 +51,34 @@ if [[ -z "$qt4_version" ]]
 then
     # Ubuntu 18.04
     echo "No Qt4!"
-    sudo apt-get -y install python-qt4
+    read -p "Qt4 is required to open the installer. Do you want to proceed? [y]/n: " yn2
+    case $yn2 in
+        # No
+        [Nn]* ) exit;;
+        
+        # Yes/Everything Else
+        * )
+            sudo apt-get -y install python-qt4 
+        ;;
+    esac    
 fi
 
 get_libcanberra=$(locate libcanberra-gtk-module.so 2>&1 | grep "libcanberra-gtk-module.so")
-if [[ -z "$get_libcanberra" ]]
+if [[ -z "$get_libcanberra111" ]]
 then
     # Ubuntu 18.04
     echo "No libcanberra-gtk-module!"
-    sudo apt-get install -y libcanberra-gtk-module
+    read -p "libcanberra is required to open the installer. Do you want to proceed? [y]/n: " yn3
+    case $yn3 in
+        # No
+        [Nn]* ) exit;;
+        
+        # Yes/Everything Else
+        * )
+            sudo apt-get install -y libcanberra-gtk-module
+        ;;
+    esac        
 fi
-
 
 DIR=$(CDPATH= cd -- "$(dirname -- "$0")" && pwd)
 $DIR/Installer/installer
-#gnome-terminal -- $DIR/Installer/install  # does a new terminal fix python2 import checks in the next GUI?
-
