--- a/install
+++ b/install
@@ -4,6 +4,7 @@
 ubuntu20_04=$(lsb_release -d 2>&1 | grep "Ubuntu 20.04")
 ubuntu22_04=$(lsb_release -d 2>&1 | grep "Ubuntu 22.04")
 dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal")
+kde_neon=$(lsb_release -d 2>&1 | grep "KDE neon")
 if [[ -n "$ubuntu20_04" ]]
 then
     # Ubuntu 20.04
@@ -19,11 +20,20 @@ then
     # DragonOS Focal
     echo "DragonOS Focal detected"
 fi
+if [[ -n "$kde_neon" ]]
+then
+    kde_version=$(lsb_release -d 2>&1 | grep "5.25")
+    if [[ -n "$kde_version" ]]
+    then
+        # KDE neon 5.25
+        echo "KDE neon 5.25 detected"
+    fi
+fi
 
-if [[ -z "$ubuntu20_04" ]] && [[ -z "$ubuntu22_04" ]] && [[ -z "$dragonOS_focal" ]]
+if [[ -z "$ubuntu20_04" ]] && [[ -z "$ubuntu22_04" ]] && [[ -z "$dragonOS_focal" ]] && [[ -z "$kde_neon" ]]
 then
     # Ubuntu 16.04, 18.04
-    echo "This branch is for Ubuntu 20.04 and 22.04 only. Switch to a different FISSURE branch before installing!"
+    echo "This branch is for Ubuntu 20.04 and 22.04 only. Switch to the Python2_maint-3.7 branch and try again!"
     exit
 fi
 
@@ -51,8 +61,19 @@ then
                 sudo apt-get install -y build-essential qtcreator qt5-default python3-pyqt5
             fi
             
+            # KDE Neon
+            if [[ -n "$dragonOS_focal" ]]
+            then
+                kde_version=$(lsb_release -d 2>&1 | grep "5.25")
+                if [[ -n "$kde_version" ]]
+                then
+                    # KDE neon 5.25
+                    sudo apt-get install -y build-essential qtcreator qt5-default python3-pyqt5
+                fi                            
+            fi
+            
             # Ubuntu 22.04
-            if [[ -n "$ubuntu22_04" ]]
+            if [[ -n "$kde_neon" ]]
             then
                 sudo apt-get install -y build-essential qtcreator qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools python3-pyqt5
             fi
