--- a/install
+++ b/install
@@ -3,7 +3,8 @@
 # Check Operating System
 ubuntu18_04=$(lsb_release -d 2>&1 | grep "Ubuntu 18.04")
 ubuntu20_04=$(lsb_release -d 2>&1 | grep "Ubuntu 20.04")
-dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal")
+dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal$")
+dragonOS_focalx=$(lsb_release -d 2>&1 | grep "DragonOS FocalX")
 kde_neon=$(lsb_release -d 2>&1 | grep "KDE neon")
 ubuntu22_04=$(lsb_release -d 2>&1 | grep "Ubuntu 22.04")
 
@@ -15,16 +16,16 @@ fi
 # Python3_maint-3.8, Ubuntu 20.04, DragonOS Focal, KDE neon
 if [[ -n "$ubuntu20_04" ]] || [[ -n "$dragonOS_focal" ]] || [[ -n "$kde_neon" ]]
 then
-    echo "Ubuntu 20.04 detected"
-    echo "This branch is for Ubuntu 18.04, 18.04.5 and 18.04.6 only. Switch to the Python3_maint-3.8 branch and try again!"
+    echo "Ubuntu 20.04 variant detected"
+    echo "This branch is for Ubuntu 18.04 variants only. Switch to the Python3_maint-3.8 branch and try again!"
     exit
 fi
 
 # Python3_maint-3.10, Ubuntu 22.04
-if [[ -n "$ubuntu22_04" ]]
+if [[ -n "$ubuntu22_04" ]] || [[ -n "$dragonOS_focalx" ]]
 then
-    echo "Ubuntu 22.04 detected"
-    echo "This branch is for Ubuntu 18.04, 18.04.5 and 18.04.6 only. Switch to the Python3_maint-3.10 branch and try again!"
+    echo "Ubuntu 22.04 variant detected"
+    echo "This branch is for Ubuntu 18.04 variants only. Switch to the Python3_maint-3.10 branch and try again!"
     exit
 fi
 
