--- a/install
+++ b/install
@@ -2,27 +2,30 @@
 
 # Check Operating System
 ubuntu20_04=$(lsb_release -d 2>&1 | grep "Ubuntu 20.04")
-dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal")
+dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal$")
+dragonOS_focalx=$(lsb_release -d 2>&1 | grep "DragonOS FocalX")
 kde_neon=$(lsb_release -d 2>&1 | grep "KDE neon")
 ubuntu18_04=$(lsb_release -d 2>&1 | grep "Ubuntu 18.04")
 ubuntu22_04=$(lsb_release -d 2>&1 | grep "Ubuntu 22.04")
 
+# Ubuntu 20.04
 if [[ -n "$ubuntu20_04" ]]
 then
-    # Ubuntu 20.04
     echo "Ubuntu 20.04 detected"
 fi
+
+# DragonOS Focal
 if [[ -n "$dragonOS_focal" ]]
 then
-    # DragonOS Focal
     echo "DragonOS Focal detected"
 fi
+
+# KDE neon 5.25
 if [[ -n "$kde_neon" ]]
 then
     kde_version=$(lsb_release -d 2>&1 | grep "5.25")
     if [[ -n "$kde_version" ]]
     then
-        # KDE neon 5.25
         echo "KDE neon 5.25 detected"
     fi
 fi
@@ -35,7 +38,7 @@ then
 fi
 
 # Python-maint_3.10, Ubuntu 22.04
-if [[ -n "$ubuntu22_04" ]] 
+if [[ -n "$ubuntu22_04" ]] || [[ -n "$dragonOS_focalx" ]]
 then
     echo "This branch is for Ubuntu 22.04 variants only. Switch to the Python3_maint-3.10 branch and try again!"
     exit
