Adding support for Parrot OS and BackBox

--- a/install
+++ b/install
@@ -5,10 +5,12 @@ kali23_1=$(lsb_release -d 2>&1 | grep "Kali")
 ubuntu22_04=$(lsb_release -d 2>&1 | grep "Ubuntu 22.04")
 ubuntu18_04=$(lsb_release -d 2>&1 | grep "Ubuntu 18.04")
 ubuntu20_04=$(lsb_release -d 2>&1 | grep "Ubuntu 20.04")
+parrot_os=$(lsb_release -d 2>&1 | grep "Parrot OS")
 dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal$")
 #dragonOS_focalx=$(lsb_release -d 2>&1 | grep "DragonOS FocalX")  # May print old version after upgrade to FocalX
 dragonOS_focalx=$(cat /etc/os-dragonos 2>&1 | grep "DragonOS FocalX")
 kde_neon=$(lsb_release -d 2>&1 | grep "KDE neon")
+backbox=$(cat /etc/issue 2>&1 | grep "BackBox")
 
 # Ubuntu 22.04
 if [[ -n "$ubuntu22_04" ]]
@@ -28,6 +30,12 @@ then
     echo "DragonOS FocalX detected"
 fi
 
+# BackBox
+if [[ -n "$backbox" ]]
+then
+    echo "BackBox detected"
+fi
+
 # Python3_maint-3.7, Ubuntu 18.04
 if [[ -n "$ubuntu18_04" ]]
 then
@@ -36,7 +44,7 @@ then
 fi
 
 # Python3_maint-3.8, Ubuntu 20.04, DragonOS Focal, KDE neon
-if [[ -n "$ubuntu20_04" ]] || [[ -n "$dragonOS_focal" ]] || [[ -n "$kde_neon" ]]
+if [[ -n "$ubuntu20_04" ]] || [[ -n "$dragonOS_focal" ]] || [[ -n "$kde_neon" ]] || [[ -n "$parrot_os" ]]
 then    
     echo "This branch is for Ubuntu 20.04 variants only. Switch to the Python3_maint-3.8 branch and try again!"
     exit
@@ -55,10 +63,14 @@ then
         
         # Yes/Everything Else
         * )            
-            # Ubuntu 22.04, Kali 23.1
-            if [[ -n "$ubuntu22_04" ]] || [[ -n "$kali23_1" ]]
+            # Ubuntu 22.04, Kali 23.1, BackBox
+            if [[ -n "$ubuntu22_04" ]] || [[ -n "$kali23_1" ]] || [[ -n "$backbox" ]]
             then
                 sudo apt-get install -y build-essential qtcreator qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools python3-pyqt5
+                if [[ -n "$kali23_1" ]]
+                then
+                    sudo apt-get install -y fonts-ubuntu
+                fi
             fi
         ;;
     esac
