--- a/install
+++ b/install
@@ -21,7 +21,7 @@ fi
 if [[ -n "$ubuntu20_04" ]] || [[ -n "$dragonOS_focal" ]] || [[ -n "$kde_neon" ]] || [[ -n "$parrot_os" ]]
 then
     echo "Ubuntu 20.04 variant detected"
-    echo "This branch is for Ubuntu 18.04 variants only. Switch to the Python3_maint-3.8 branch and try again!"
+    echo "This branch is not for Ubuntu 20.04 variants. Switch to the Python3_maint-3.8 branch and try again!"
     exit
 fi
 
@@ -29,7 +29,7 @@ fi
 if [[ -n "$ubuntu22_04" ]] || [[ -n "$dragonOS_focalx" ]] || [[ -n "$kali23_1" ]] || [[ -n "$backbox" ]]
 then
     echo "Ubuntu 22.04 variant detected"
-    echo "This branch is for Ubuntu 18.04 variants only. Switch to the Python3_maint-3.10 branch and try again!"
+    echo "This branch is not for Ubuntu 22.04 variants. Switch to the Python3_maint-3.10 branch and try again!"
     exit
 fi
 
