--- a/install
+++ b/install
@@ -4,7 +4,7 @@
 #        Check Operating System        #
 ########################################
 ubuntu20_04=$(lsb_release -d 2>&1 | grep "Ubuntu 20.04")
-parrot_os=$(lsb_release -d 2>&1 | grep "Parrot OS")
+parrot_os=$(lsb_release -d 2>&1 | grep "Parrot")
 dragonOS_focal=$(lsb_release -d 2>&1 | grep "DragonOS Focal$")
 #dragonOS_focalx=$(lsb_release -d 2>&1 | grep "DragonOS FocalX")  # May print old version after upgrade to FocalX
 dragonOS_focalx=$(cat /etc/os-dragonos 2>&1 | grep "DragonOS FocalX")
@@ -22,12 +22,6 @@ raspberry_pi_os=$(lsb_release -d 2>&1 | grep "bookworm")
 if [[ -n "$ubuntu20_04" ]]
 then
     echo "Ubuntu 20.04 detected"
-fi
-
-# Parrot OS
-if [[ -n "$parrot_os" ]]
-then
-    echo "Parrot OS detected"
 fi
 
 # DragonOS Focal
@@ -81,6 +75,12 @@ then
     echo "Raspberry Pi OS (bookworm) detected"
 fi
 
+# Parrot OS
+if [[ -n "$parrot_os" ]]
+then
+    echo "Parrot OS detected"
+fi
+
 # Python2-maint_3.7, Ubuntu 18.04
 if [[ -n "$ubuntu18_04" ]]
 then    
@@ -109,12 +109,12 @@ then
             fi
             
             # Parrot OS
-            if [[ -n "$parrot_os" ]]
-            then
-                sudo apt-get install -y libvulkan-dev=1.3.224.0-1~bpo11+1
-                sudo apt-get install -y build-essential qtcreator qt5-default python3-pyqt5
-                sudo apt-get install -y fonts-ubuntu
-            fi
+            #if [[ -n "$parrot_os" ]]
+            #then
+            #    sudo apt-get install -y libvulkan-dev=1.3.224.0-1~bpo11+1
+            #    sudo apt-get install -y build-essential qtcreator qt5-default python3-pyqt5
+            #    sudo apt-get install -y fonts-ubuntu
+            #fi
             
             # DragonOS Focal
             if [[ -n "$dragonOS_focal" ]]
@@ -136,10 +136,10 @@ then
             fi
               
             # Ubuntu 22.04, Kali 23.1, BackBox
-            if [[ -n "$ubuntu22_04" ]] || [[ -n "$kali23_1" ]] || [[ -n "$backbox" ]] || [[ -n "$raspberry_pi_os" ]]
+            if [[ -n "$ubuntu22_04" ]] || [[ -n "$kali23_1" ]] || [[ -n "$backbox" ]] || [[ -n "$raspberry_pi_os" ]] || [[ -n "$parrot_os" ]]
             then
                 sudo apt-get install -y build-essential qtcreator qtbase5-dev qtchooser qt5-qmake qtbase5-dev-tools python3-pyqt5
-                if [[ -n "$kali23_1" ]] || [[ -n "$raspberry_pi_os" ]]
+                if [[ -n "$kali23_1" ]] || [[ -n "$raspberry_pi_os" ]] || [[ -n "$parrot_os" ]]
                 then
                     sudo apt-get install -y fonts-ubuntu
                 fi
